fix animations on firefox

--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,11 @@
   to {background-color: #dedede;}
 }
 
+@-moz-keyframes mouse-hover {
+  from {background-color: #f9f9f9;}
+  to {background-color: #dedede;}
+}
+
 
 body {
   padding: 50px;
